Premier commit pour le backend

--- a/package.json
+++ b/package.json
@@ -9,18 +9,12 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "jest": "^28.1.1",
-    "node-fetch": "^2.7.0",
-    "supertest": "^6.2.3"
-  },
-  "main": "app.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "supertest": "^6.2.3",
+		"node-fetch": "2"
+  }
 }
