--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.1",
     "express": "~4.16.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "jest": "^28.1.1",
-    "supertest": "^6.2.3",
-		"node-fetch": "2"
+    "node-fetch": "2",
+    "supertest": "^6.2.3"
   }
 }
